Refs #15172 adding UI changes for current activity

--- a/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
@@ -6,9 +6,9 @@
   <thead>
     <tr>
       <th>Account Balance</th>
-      <th>Past Due</th>
+      <th>Past Due Balance</th>
       <th></th>
-      <th>Previous Balance</th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
