--- a/app/views/employers/employer_profiles/my_account/accounts/_current_activity.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_current_activity.html.erb
@@ -1,4 +1,5 @@
 <br>
+<h4><strong>Activity</strong></h4>
 <br>
 <table class="table">
   <thead>
@@ -13,7 +14,7 @@
     <!-- Starting Balancce -->
     <tr>
       <td></td>
-      <td>Starting Balance</td>
+      <td><strong>Previous Balance</strong></td>
       <td></td>
       <td><%= number_to_currency(@previous_balance) %></td>
     </tr>
@@ -33,18 +34,42 @@
     </tr>
     <!-- Adjustments -->
     <tr>
-      <td></td>
-      <td>Adjustments</td>
+      <td class="icon"><span class="pull-right glyphicon glyphicon-plus"></span></td>
+      <td>Adjustments since last invoice</td>
       <td><%= number_to_currency(@adjustments) %></td>
       <td></td>
     </tr>
-    <!-- Ending Balance -->
-    <tr>
+
+    <!-- Payments -->
+    <tr class="payments">
       <td></td>
-      <td>Ending Balance</td>
-      <td></td>
-      <td><%= number_to_currency(@total_due) %></td>
+      <td>Nikola</td>
+      <td>Aleksandra</td>
+      <td>Andreja</td>
     </tr>
+
+    <tr class="payments">
+      <td></td>
+      <td>Nikola</td>
+      <td>Aleksandra</td>
+      <td>Andreja</td>
+    </tr>
+
   </tbody>
 
 </table>
+
+<!-- display payment history -->
+<%= render partial: "employers/employer_profiles/my_account/accounts/payment_history" %>
+
+<script>
+  $(document).ready(function() {
+    $('.payments').hide();
+  });
+
+
+  $('td.icon').click(function() {
+    $(this).find('span').toggleClass('glyphicon-plus').toggleClass('glyphicon-minus');
+    $('tr.payments').toggle();
+  });
+</script>
