--- a/app/views/employers/employer_profiles/my_account/accounts/_current_activity.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_current_activity.html.erb
@@ -18,13 +18,34 @@
       <td></td>
       <td><%= number_to_currency(@employer_profile.try(:employer_profile_account).try(:previous_balance)) || "Data not available" %></td>
     </tr>
-    <!-- Payment -->
+    <!-- Payments -->
     <tr>
-      <td><%= @most_recent_payment_date %></td>
-      <td>Payment</td>
-      <td><%= (@employer_profile.try(:employer_profile_account).try(:payments)) || "Data not available" %></td>
+      <td class="payments-icon"><span class="pull-right glyphicon glyphicon-plus"></span></td>
+      <td>Payments since last invoice</td>
+      <!-- <td><%= (@employer_profile.try(:employer_profile_account).try(:payments)) || "Data not available" %></td> -->
+      <td></td>
       <td></td>
     </tr>
+    <% if @employer_profile.try(:employer_profile_account).try(:current_statement_activity).size == 0 %>
+    <tr class="payments">
+      <td></td>
+      <td>There have been no payments since the last invoice.</td>
+      <td></td>
+      <td></td>
+    </tr>
+    <% else %>
+      <% @employer_profile.try(:employer_profile_account).try(:current_statement_activity).each do |activity| %>
+        <% if activity.type == "Payments" %>
+          <tr class="payments">
+            <td><%= activity.posting_date %></td>
+            <td>Payment Type: <%= activity.payment_method %></td>
+            <td><%= number_to_currency(activity.amount) %></td>
+            <td></td>
+          </tr>
+        <% end %>
+      <% end %>
+    <% end %>
+
     <!-- New Charges -->
     <tr>
       <td></td>
@@ -34,15 +55,14 @@
     </tr>
     <!-- Adjustments -->
     <tr>
-      <td class="icon"><span class="pull-right glyphicon glyphicon-plus"></span></td>
+      <td class="adjustments-icon"><span class="pull-right glyphicon glyphicon-plus"></span></td>
       <td>Adjustments since last invoice</td>
       <td></td>
       <td></td>
     </tr>
 
-    <!-- Payments -->
     <% if @employer_profile.try(:employer_profile_account).try(:current_statement_activity).size == 0 %>
-    <tr class="payments">
+    <tr class="adjustments">
       <td></td>
       <td>There have been no adjustments since the last invoice.</td>
       <td></td>
@@ -50,12 +70,14 @@
     </tr>
     <% else %>
       <% @employer_profile.try(:employer_profile_account).try(:current_statement_activity).each do |activity| %>
-        <tr class="payments">
-          <td><%= activity.coverage_month %></td>
-          <td><%= activity.name %></td>
-          <td><%= number_to_currency(activity.amount) %></td>
-          <td></td>
-        </tr>
+        <% if activity.type == "Adjustments" %>
+          <tr class="adjustments">
+            <td><%= activity.coverage_month %></td>
+            <td><%= activity.name %></td>
+            <td><%= number_to_currency(activity.amount) %></td>
+            <td></td>
+          </tr>
+        <% end %>
       <% end %>
     <% end %>
 
@@ -69,11 +91,17 @@
 <script>
   $(document).ready(function() {
     $('.payments').hide();
+    $('.adjustments').hide();
   });
 
 
-  $('td.icon').click(function() {
+  $('td.payments-icon').click(function() {
     $(this).find('span').toggleClass('glyphicon-plus').toggleClass('glyphicon-minus');
     $('tr.payments').toggle();
+  });
+
+  $('td.adjustments-icon').click(function() {
+    $(this).find('span').toggleClass('glyphicon-plus').toggleClass('glyphicon-minus');
+    $('tr.adjustments').toggle();
   });
 </script>
