Refs #15172 null fixes and default tax for no payments

--- a/app/views/employers/employer_profiles/my_account/accounts/_current_activity.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_current_activity.html.erb
@@ -26,7 +26,7 @@
       <td></td>
       <td></td>
     </tr>
-    <% if @employer_profile.try(:employer_profile_account).try(:current_statement_activity).size == 0 %>
+    <% if @employer_profile.try(:employer_profile_account).try(:current_statement_activity) == nil %>
     <tr class="payments">
       <td></td>
       <td>There have been no payments since the last invoice.</td>
@@ -61,7 +61,7 @@
       <td></td>
     </tr>
 
-    <% if @employer_profile.try(:employer_profile_account).try(:current_statement_activity).size == 0 %>
+    <% if @employer_profile.try(:employer_profile_account).try(:current_statement_activity) == nil %>
     <tr class="adjustments">
       <td></td>
       <td>There have been no adjustments since the last invoice.</td>
