--- a/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
@@ -1,80 +1,126 @@
 <div class="accounts-tab">
+  <h1 class="darkblue no-buffer">Account</h1>
+  <br>
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Account Balance</th>
+        <th>Past Due Balance</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td><%= number_to_currency(@employer_profile.try(:employer_profile_account).try(:total_due)) || "Data not available" %></td>
+        <td><%= number_to_currency(@employer_profile.try(:employer_profile_account).try(:past_due)) || "Data not available" %></td>
+      </tr>
+    </tbody>
+  </table>
 
-<h1 class="darkblue no-buffer">Account</h1>
-<br>
-<table class="table">
-  <thead>
-    <tr>
-      <th>Account Balance</th>
-      <th>Past Due Balance</th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td><%= number_to_currency(@employer_profile.try(:employer_profile_account).try(:total_due)) || "Data not available" %></td>
-      <td><%= number_to_currency(@employer_profile.try(:employer_profile_account).try(:past_due)) || "Data not available" %></td>
-    </tr>
-  </tbody>
-</table>
+  <% if @pay_bill %>
+    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" id="currentActivity">Current Activity</button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" id="statements">Statements</button>
+      </div>
+      <div class="btn-group" role="group">
+        <!-- <button type="button" class="btn btn-default" id="payMyBill">Pay My Bill</button> -->
+        <%= link_to "Billing", wells_fargo_sso_employers_employer_profile_path(@employer_profile), class: 'btn btn-default', id: 'entry' %>
+      </div>
+    </div>
+  <% else %>
+    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" id="entry">Current Activity</button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" id="statements">Statements</button>
+      </div>
+      <div class="btn-group" role="group">
+        <!-- <button type="button" class="btn btn-default" id="payMyBill">Pay My Bill</button> -->
+        <%= link_to "Billing", wells_fargo_sso_employers_employer_profile_path(@employer_profile), class: 'btn btn-default' %>
+      </div>
+    </div>
+  <% end %>
 
-<div class="btn-group btn-group-justified" role="group" aria-label="...">
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default" id="currentActivity">Current Activity</button>
-  </div>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default" id="statements">Statements</button>
-  </div>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default" id="payMyBill">Pay My Bill</button>
-  </div>
-</div>
-
-<div class="account-content">
-  <div class="current-activity">
-    <%= render partial: "employers/employer_profiles/my_account/accounts/current_activity" %>
-  </div>
-  <div class="statements">
-    <%= render partial: "employers/employer_profiles/my_account/accounts/statements" %>
-  </div>
-  <div class="pay-my-bill">
-    <%= render partial: "employers/employer_profiles/my_account/accounts/pay_my_bill" %>
-  </div>
-</div>
-
+  <% if @pay_bill %>
+    <div class="account-content">
+      <div class="current-activity">
+        <%= render partial: "employers/employer_profiles/my_account/accounts/current_activity" %>
+      </div>
+      <div class="statements">
+        <%= render partial: "employers/employer_profiles/my_account/accounts/statements" %>
+      </div>
+      <div class="entry">
+        <%= render partial: "employers/employer_profiles/my_account/accounts/pay_my_bill" %>
+      </div>
+    </div>
+  <% else %>
+    <div class="account-content">
+      <div class="entry">
+        <%= render partial: "employers/employer_profiles/my_account/accounts/current_activity" %>
+      </div>
+      <div class="statements">
+        <%= render partial: "employers/employer_profiles/my_account/accounts/statements" %>
+      </div>
+      <div class="pay-my-bill">
+        <%= render partial: "employers/employer_profiles/my_account/accounts/pay_my_bill" %>
+      </div>
+    </div>
+  <% end %>
 </div>
 
 
 <script>
   $(document).ready(function() {
+    $('.current-activity').hide();
     $('.statements').hide();
     $('.pay-my-bill').hide();
-    $('#currentActivity').addClass('active');
+    $('.entry').show();
+    $('#entry').addClass('active');
   });
 
   $('#currentActivity').click(function() {
     $('.statements').hide();
     $('.pay-my-bill').hide();
+    $('.entry').hide();
     $('.current-activity').show();
     $('#currentActivity').addClass('active');
     $('#statements').removeClass('active');
-    $('#payMyBill').removeClass('active');
+    $('#entry').removeClass('active');
   });
 
   $('#statements').click(function() {
     $('.current-activity').hide();
     $('.pay-my-bill').hide();
+    $('.entry').hide();
     $('.statements').show();
     $('#currentActivity').removeClass('active');
     $('#statements').addClass('active');
     $('#payMyBill').removeClass('active');
+    $('#entry').removeClass('active');
   });
 
-  $('#payMyBill').click(function() {
+  // for case when pay bill has been selected and click current activity tab
+  $('#entry').click(function() {
     $('.current-activity').hide();
+    $('.pay-my-bill').hide();
+    $('.entry').show();
     $('.statements').hide();
-    $('.pay-my-bill').show();
     $('#currentActivity').removeClass('active');
     $('#statements').removeClass('active');
-    $('#payMyBill').addClass('active');
+    $('#payMyBill').removeClass('active');
+    $('#entry').addClass('active');
   });
+
+
+  //$('#payMyBill').click(function() {
+  //  $('.current-activity').hide();
+  //    $('.statements').hide();
+  //  $('.pay-my-bill').show();
+  //  $('#currentActivity').removeClass('active');
+  //  $('#statements').removeClass('active');
+  //    $('#payMyBill').addClass('active');
+  //});
 </script>
