--- a/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
@@ -1,5 +1,5 @@
 <div class="accounts-tab">
-  <h1 class="darkblue no-buffer">Account</h1>
+  <h2 class="darkblue no-buffer">Account Number: <%= @employer_profile.hbx_id %> </h2>
   <br>
   <table class="table">
     <thead>
@@ -16,49 +16,45 @@
     </tbody>
   </table>
 
-  <% if @pay_bill %>
+  <% if @bill_pay_authenticated.present? %>
     <div class="btn-group btn-group-justified" role="group" aria-label="...">
       <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default" id="currentActivity">Current Activity</button>
+        <button type="button" class="btn btn-default" id="recentActivity">Recent Activity</button>
       </div>
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-default" id="statements">Statements</button>
       </div>
       <div class="btn-group" role="group">
-        <!-- <button type="button" class="btn btn-default" id="payMyBill">Pay My Bill</button> -->
-        <%= link_to "Billing", wells_fargo_sso_employers_employer_profile_path(@employer_profile), class: 'btn btn-default', id: 'entry' %>
+        <button type="button" class="btn btn-default on-load" id="payMyBill">Pay My Bill</button>
+        <!-- <%= link_to "Pay My Bill", wells_fargo_sso_employers_employer_profile_path(@employer_profile), class: 'btn btn-default' %> -->
       </div>
     </div>
-  <% else %>
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default" id="entry">Current Activity</button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default" id="statements">Statements</button>
-      </div>
-      <div class="btn-group" role="group">
-        <!-- <button type="button" class="btn btn-default" id="payMyBill">Pay My Bill</button> -->
-        <%= link_to "Billing", wells_fargo_sso_employers_employer_profile_path(@employer_profile), class: 'btn btn-default' %>
-      </div>
-    </div>
-  <% end %>
-
-  <% if @pay_bill %>
     <div class="account-content">
-      <div class="current-activity">
+      <div class="recent-activity">
         <%= render partial: "employers/employer_profiles/my_account/accounts/current_activity" %>
       </div>
       <div class="statements">
         <%= render partial: "employers/employer_profiles/my_account/accounts/statements" %>
       </div>
-      <div class="entry">
+      <div class="pay-my-bill on-load">
         <%= render partial: "employers/employer_profiles/my_account/accounts/pay_my_bill" %>
       </div>
     </div>
   <% else %>
+    <div class="btn-group btn-group-justified" role="group" aria-label="...">
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default on-load" id="recentActivity">Recent Activity</button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" id="statements">Statements</button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" id="payMyBill">Pay My Bill</button>
+        <!-- <%= link_to "Pay My Bill", wells_fargo_sso_employers_employer_profile_path(@employer_profile), class: 'btn btn-default' %> -->
+      </div>
+    </div>
     <div class="account-content">
-      <div class="entry">
+      <div class="recent-activity on-load">
         <%= render partial: "employers/employer_profiles/my_account/accounts/current_activity" %>
       </div>
       <div class="statements">
@@ -68,49 +64,44 @@
         <%= render partial: "employers/employer_profiles/my_account/accounts/pay_my_bill" %>
       </div>
     </div>
-  <% end %>
+  <% end %>  
 </div>
 
 
 <script>
   $(document).ready(function() {
-    $('.current-activity').hide();
+    $('.recent-activity').hide();
     $('.statements').hide();
     $('.pay-my-bill').hide();
-    $('.entry').show();
-    $('#entry').addClass('active');
+    $('.on-load').show();
+    $('.on-load').addClass('active');
   });
 
-  $('#currentActivity').click(function() {
+  $('#recentActivity').click(function() {
     $('.statements').hide();
     $('.pay-my-bill').hide();
-    $('.entry').hide();
-    $('.current-activity').show();
-    $('#currentActivity').addClass('active');
+    $('.recent-activity').show();
+    $('#recentActivity').addClass('active');
     $('#statements').removeClass('active');
-    $('#entry').removeClass('active');
+    $('#payMyBill').removeClass('active');
   });
 
   $('#statements').click(function() {
-    $('.current-activity').hide();
+    $('.recent-activity').hide();
     $('.pay-my-bill').hide();
-    $('.entry').hide();
     $('.statements').show();
-    $('#currentActivity').removeClass('active');
+    $('#recentActivity').removeClass('active');
     $('#statements').addClass('active');
     $('#payMyBill').removeClass('active');
-    $('#entry').removeClass('active');
   });
 
-  $('#entry').click(function() {
-    $('.current-activity').hide();
-    $('.pay-my-bill').hide();
-    $('.entry').show();
+  $('#payMyBill').click(function() {
+    $('.recent-activity').hide();
+    $('.pay-my-bill').show();
     $('.statements').hide();
-    $('#currentActivity').removeClass('active');
+    $('#recentActivity').removeClass('active');
     $('#statements').removeClass('active');
-    $('#payMyBill').removeClass('active');
-    $('#entry').addClass('active');
+    $('#payMyBill').addClass('active');
   });
 
 </script>
