--- a/app/views/employers/employer_profiles/my_account/accounts/_pay_my_bill.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_pay_my_bill.html.erb
@@ -1,4 +1,4 @@
-<h1 class="darkblue no-buffer">Billing</h1>
+<h3 class="darkblue no-buffer">Billing</h3>
 <h4 class="starter">
   <%= Settings.site.short_name %>
   will mail you a monthly invoice at the beginning of each month. The invoice will include charges for the next month's premium payments, as well as any adjustments from previous months. You will make one premium payment each month, regardless of
@@ -13,7 +13,14 @@
 <h4>
   <ol>
     <li>
-      <%= link_to '<button class="btn btn-default">Pay Online</button>'.html_safe, @wf_url, target: :_blank %>
+      <!--<%= link_to "Pay Online", wells_fargo_sso_employers_employer_profile_path(@employer_profile), target: :_blank %> -->
+      <!-- <%= link_to '<button class="btn btn-default">Pay Online</button>'.html_safe, wells_fargo_sso_employers_employer_profile_path(@employer_profile) %> -->
+      <!-- <%= link_to 'Pay Online', @wf_url, target: :_blank %> -->
+      <% if @wf_url.present? %>
+        <%= link_to '<button class="btn btn-default">Pay Online</button>'.html_safe, @wf_url, target: :_blank %>
+      <% else %>
+        <%= link_to '<button class="btn btn-default">Pay Online</button>'.html_safe, employers_employer_profile_path(@employer_profile, :tab => 'accounts', :bill_pay_authenticated => 'false') %>
+      <% end %>
       <div class="row col-md-offset-1">
         <%= link_to 'How to Pay Online - Instructions', asset_path("pdf/employers_paying_your_premiums_online.pdf") , target: "_blank"%>
       </div>
