--- a/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
@@ -15,64 +15,37 @@
       </tr>
     </tbody>
   </table>
-
-  <% if @bill_pay_authenticated.present? %>
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default" id="recentActivity">Recent Activity</button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default" id="statements">Statements</button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default on-load" id="payMyBill">Pay My Bill</button>
-      </div>
+  <div class="btn-group btn-group-justified" role="group" aria-label="...">
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-default" id="recentActivity">Recent Activity</button>
     </div>
-    <div class="account-content">
-      <div class="recent-activity">
-        <%= render partial: "employers/employer_profiles/my_account/accounts/current_activity" %>
-      </div>
-      <div class="statements">
-        <%= render partial: "employers/employer_profiles/my_account/accounts/statements" %>
-      </div>
-      <div class="pay-my-bill on-load">
-        <%= render partial: "employers/employer_profiles/my_account/accounts/pay_my_bill" %>
-      </div>
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-default" id="statements">Statements</button>
     </div>
-  <% else %>
-    <div class="btn-group btn-group-justified" role="group" aria-label="...">
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default on-load" id="recentActivity">Recent Activity</button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default" id="statements">Statements</button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default" id="payMyBill">Pay My Bill</button>
-      </div>
+    <div class="btn-group" role="group">
+      <button type="button" class="btn btn-default" id="payMyBill">Pay My Bill</button>
     </div>
-    <div class="account-content">
-      <div class="recent-activity on-load">
-        <%= render partial: "employers/employer_profiles/my_account/accounts/current_activity" %>
-      </div>
-      <div class="statements">
-        <%= render partial: "employers/employer_profiles/my_account/accounts/statements" %>
-      </div>
-      <div class="pay-my-bill">
-        <%= render partial: "employers/employer_profiles/my_account/accounts/pay_my_bill" %>
-      </div>
+  </div>
+  <div class="account-content">
+    <div class="recent-activity on-load">
+      <%= render partial: "employers/employer_profiles/my_account/accounts/current_activity" %>
     </div>
-  <% end %>
+    <div class="statements">
+      <%= render partial: "employers/employer_profiles/my_account/accounts/statements" %>
+    </div>
+    <div class="pay-my-bill">
+      <%= render partial: "employers/employer_profiles/my_account/accounts/pay_my_bill" %>
+    </div>
+  </div>
 </div>
 
 
 <script>
   $(document).ready(function() {
-    $('.recent-activity').hide();
+    $('.recent-activity').show();
     $('.statements').hide();
     $('.pay-my-bill').hide();
-    $('.on-load').show();
-    $('.on-load').addClass('active');
+    $('#recentActivity').addClass('active');
   });
 
   $('#recentActivity').click(function() {
