--- a/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
@@ -4,8 +4,10 @@
   <table class="table">
     <thead>
       <tr>
-        <th>Account Balance</th>
-        <th>Past Due Balance</th>
+        <th>Account Balance <i class="fa fa-info-circle" data-toggle="tooltip" data-placement="right" title="Account Balance includes payments and enrollment changes made since the latest invoice but have not yet been billed.  This may not be the total amount that is currently due."></i>
+        </th>
+        <th>Past Due Balance <i class="fa fa-info-circle" data-toggle="tooltip" data-placement="right" title="Past Due Amount includes premiums that were previously billed but were not paid by the due date. If premiums are not paid within 2 months of the due date, your group’s health coverage may be terminated."></i>
+        </th>
       </tr>
     </thead>
     <tbody>
