--- a/app/views/employers/employer_profiles/my_account/accounts/_payment_history.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_payment_history.html.erb
@@ -10,7 +10,7 @@
     </tr>
   </thead>
   <tbody>
-    <% if @employer_profile.try(:employer_profile_account).try(:premium_payments) == nil %>
+    <% if @payments == nil %>
     <tr>
       <td></td>
       <td>There are no payments in your history.</td>
@@ -18,7 +18,7 @@
       <td></td>
     </tr>
     <% else %>
-      <% @employer_profile.try(:employer_profile_account).try(:premium_payments).each do |payment| %>
+      <% @payments.each do |payment| %>
         <tr>
           <td><%= payment.paid_on %></td>
           <td><%= number_to_currency(payment.amount) %></td>
@@ -29,3 +29,21 @@
     <% end %>
   </tbody>
 </table>
+<div class="container-flid text-center">
+  <div class="btn-group" role="group" aria-label="...">
+    <% num_of_payments = @employer_profile.try(:employer_profile_account).try(:premium_payments).size %>
+    <% num_of_pages = (1..num_of_payments).to_a %>
+
+    <% num_of_pages.each do |page_num|%>
+      <div class="btn-group" role="group">
+        <% if @page_num.nil? && page_num == 1 %>
+          <%= link_to "<button class='btn btn-default active' id='page-num-1'>1</button>".html_safe, employers_employer_profile_path(@employer_profile, tab: "accounts", page_num: "1") %>
+        <% elsif page_num == @page_num.to_i %>
+          <%= link_to "<button class='btn btn-default active' id='page-num-#{page_num}'>#{page_num}</button>".html_safe, employers_employer_profile_path(@employer_profile, tab: "accounts", page_num: page_num) %>
+        <% else %>
+        <%= link_to "<button class='btn btn-default' id='page-num-#{page_num}'>#{page_num}</button>".html_safe, employers_employer_profile_path(@employer_profile, tab: "accounts", page_num: page_num) %>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
