completed UI changes per business

--- a/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_accounts.html.erb
@@ -13,7 +13,11 @@
     <tbody>
       <tr>
         <td><%= number_to_currency(@employer_profile.try(:employer_profile_account).try(:total_due)) || "Data not available" %></td>
-        <td><%= number_to_currency(@employer_profile.try(:employer_profile_account).try(:past_due)) || "Data not available" %></td>
+        <% if @employer_profile.try(:employer_profile_account).try(:past_due) > 0 %>
+          <td style="color:Red"><%= number_to_currency(@employer_profile.try(:employer_profile_account).try(:past_due))%></td>
+        <% else %>
+          <td><%= number_to_currency(@employer_profile.try(:employer_profile_account).try(:past_due)) || "Data not available" %></td>
+        <% end %>
       </tr>
     </tbody>
   </table>
