--- a/app/assets/stylesheets/custom.scss.erb
+++ b/app/assets/stylesheets/custom.scss.erb
@@ -107,6 +107,10 @@ a {
     background: none repeat scroll 0 0 #f5f5f5;
 }
 
+.negative_amount {
+  color: red;
+}
+
 /* Flash Messages */
 .alert {
   padding-left: 60px;
