--- a/app/views/employers/employer_profiles/my_account/accounts/_current_activity.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_current_activity.html.erb
@@ -79,7 +79,7 @@
 </table>
 
 <!-- display payment history -->
-<%= render partial: "employers/employer_profiles/my_account/accounts/payment_history" if @employer_profile_account %>
+<%= render partial: "employers/employer_profiles/my_account/accounts/payment_history" %>
 
 <script>
   $(document).ready(function() {
