added missing route

--- a/app/views/employers/employer_profiles/my_account/accounts/_statements.html.erb
+++ b/app/views/employers/employer_profiles/my_account/accounts/_statements.html.erb
@@ -33,7 +33,7 @@
             <td></td>
             <td><%= invoice_formated_date(invoice.date) %></td>
             <td><%= invoice_coverage_date(invoice.date) %></td>
-            <td><%= link_to "<i class='fa fa-cloud-download' aria-hidden='true' title='Download' data-toggle='tooltip'></i>".html_safe, download_invoice_employers_employer_profile_path(@employer_profile, :invoice_id => invoice.id), :target => "_blank" , :type => "pdf", :disposition =>  "inline" %></td>
+            <td><%= link_to "<i class='fa fa-cloud-download' aria-hidden='false' title='Download' data-toggle='tooltip'></i>".html_safe, download_invoice_employers_employer_profile_path(@employer_profile, :invoice_id => invoice.id), :target => "_blank" , :type => "pdf", :disposition =>  "inline" %></td>
             <td><%= link_to "<i class='glyphicon glyphicon-open-file' aria-hidden='true' data-toggle='tooltip'></i>".html_safe, show_invoice_employers_employer_profile_path(@employer_profile, :invoice_id => invoice.id), :target => "_blank"%></td>
           </tr>
         <% end %>
