refs#22614 changed placeholder for self income form

--- a/app/views/financial_assistance/incomes/_self_employed_income_form.erb
+++ b/app/views/financial_assistance/incomes/_self_employed_income_form.erb
@@ -3,7 +3,8 @@
   <div class="focus_effect_module row-edit-border">
     <div class="row row-form-wrapper no-buffer row-height">
       <div class="col-md-3">
-        <%= f.text_field :amount, placeholder: 'AMOUNT *', required: true, class: "floatlabel" %>
+        <%= f.label :frequency_kind, 'Amount *', class: "amount label-color" %>
+        <%= f.text_field :amount, placeholder: '0.00', value: "", required: true %>
       </div>
 
       <div class="col-md-3 fa-select select-box">
