--- a/app/views/vue/app.html.erb
+++ b/app/views/vue/app.html.erb
@@ -12,6 +12,7 @@
         <v-toolbar-items>
 
           <!-- <v-btn flat :to="{name:'employer-my'}">Employer Home</v-btn> -->
+          <v-btn color="blue" flat to="/bqt">Broker Quoting Tool</v-btn>
           <v-btn color="blue" flat to="/employer-home/1234">Employer Home</v-btn>
           <!--<v-btn flat v-on:click="link = 'employer-home'">Employer Home</v-btn>-->
           <v-btn color="blue" flat :to="{path: '/hbx'}">Plan Browser</v-btn>
