--- a/app/views/insured/employee_roles/search.html.haml
+++ b/app/views/insured/employee_roles/search.html.haml
@@ -7,5 +7,6 @@
         .col-lg-7.col-md-7.col-sm-8.col-xs-12
           %h3= l10n("personal_information")
           = render 'remote_search_form', f: f
+          = render 'vue_remote_search_form', f: f
         .col-lg-3.col-md-3.col-sm-3.col-xs-12.col-md-offset-2.col-sm-offset-1.right-section
           = render  partial: 'shared/signup_progress', locals: {step: '1'}
