Refs Pay Now Kaiser- PAY NOW button available immediately after enrollment

--- a/app/views/insured/plan_shoppings/receipt.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.html.erb
@@ -39,6 +39,9 @@
         <% if @enrollment.employee_role.present? %>
         <% else %>
           <span class="btn btn-default" data-target="#how_to_pay" data-toggle="modal">How to Pay</span>
+					<% if @enrollment.plan.carrier_profile.legal_name == "Kaiser" %>
+						<button class="btn btn-default">Pay Now</button>
+					<% end %>
         <% end %>
         <%= link_to 'Print', '#', id: 'btnPrint', class: "btn btn-default interaction-click-control-print-purchase-confirmation" %>
       </div>
