--- a/app/views/insured/plan_shoppings/receipt.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.html.erb
@@ -41,7 +41,7 @@
 					<span class="btn btn-default" data-target="#how_to_pay" data-toggle="modal">How to Pay</span>
 				<% end %>
 				<% if @enrollment.plan.carrier_profile.legal_name == "Kaiser" %>
-					<button class="btn btn-default">Pay Now</button>
+					<button class="btn btn-primary" data-toggle="modal" data-target="#payNowModal">Pay Now</button>
 				<% end %>
         <%= link_to 'Print', '#', id: 'btnPrint', class: "btn btn-default interaction-click-control-print-purchase-confirmation" %>
       </div>
@@ -201,3 +201,31 @@
     </div>
   </div>
 </div><br>
+
+<!-- Payment confitmation modal-->
+<div class="modal fade" tabindex="-1" role="dialog" id="payNowModal">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title text-center text-uppercase"><strong>Warning !!!</strong></h4>
+      </div>
+      <div class="modal-body">
+        <p>
+				You are leaving the <%= Settings.site.short_name %> website and entering a privately-owned website created, operated and maintained by Kaiser Permanente.<br />
+				<ul>
+					<li>This link is provided for your convenience to allow you to pay your first month’s insurance premium now. It’s only available to make your first payment</li>
+					<li>The information that Kaiser Permanente collects and maintains as a result of your visit to its website is different from the information that DC Health Link collects and maintains.</li>
+					<li>DC Health Link cannot help you with any information regarding this website, including your username or password, or other technical issues.</li>
+					<br />
+				</ul>
+				By linking to this private business, DC Health Link is not endorsing its products, services, or privacy or security policies. We recommend you review the business's information collection policy or terms and conditions to fully understand what information is collected by Kaiser Permanente.
+				</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default pull-left">LEAVE DC HEALTH LINK</button>
+        <button type="button" class="btn btn-default" data-dismiss="modal">GO BACK</button>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
