--- a/app/views/insured/plan_shoppings/receipt.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.html.erb
@@ -12,7 +12,11 @@
           <p>Please print this page for your records. A copy of this confirmation has also been emailed to you.</p>
           <% if @enrollment.employee_role.present? %>
           <% else %>
-          <p><strong>Important:</strong> You must pay your first month’s premium directly to your carrier for your coverage to take effect. Select 'How to Pay' to learn more.</p>
+					<% if @enrollment.plan.carrier_profile.legal_name == "Kaiser" %>
+					<p><strong>Important:</strong> You must pay your first month’s premium directly to Kaiser Permanente to activate your coverage. Select PAY NOW to make your first premium payment online.  To learn about other payment options, select ‘How to Pay’. .</p>
+					<% else %>
+					<p><strong>Important:</strong> You must pay your first month’s premium directly to your carrier for your coverage to take effect. Select 'How to Pay' to learn more.</p>
+					<% end %>
           <p>When you’re finished, select GO TO MY ACCOUNT to view the status of your enrollment. You can also contact your insurance carrier directly for additional information or to check the status of your enrollment.</p>
           <% end %>
 
@@ -40,10 +44,13 @@
         <% else %>
 					<span class="btn btn-default" data-target="#how_to_pay" data-toggle="modal">How to Pay</span>
 				<% end %>
+        <%= link_to 'Print', '#', id: 'btnPrint', class: "btn btn-default interaction-click-control-print-purchase-confirmation" %>
 				<% if @enrollment.plan.carrier_profile.legal_name == "Kaiser" %>
 					<button class="btn btn-primary" data-toggle="modal" data-target="#payNowModal">Pay Now</button>
+					<br />
+					<br />
+					<strong>You only have the option to PAY NOW while you’re on this page. If you leave this page without selecting PAY NOW, you’ll have to wait until Kaiser Permanente sends you an invoice to make your first month’s payment and activate your coverage.</strong>
 				<% end %>
-        <%= link_to 'Print', '#', id: 'btnPrint', class: "btn btn-default interaction-click-control-print-purchase-confirmation" %>
       </div>
 
       <div id="how_to_pay" class="modal fade" role="dialog" style="display: none;" <% if @enrollment.employee_role.present? %>data-employee-role="true"<% else %>data-employee-role="false"<% end %>>
@@ -62,7 +69,24 @@
               <br/>
               <ol>
                 <li>
-                  <strong>Make your first premium payment directly to <%= @plan.carrier_profile.legal_name %>.</strong>  Your enrollment information was electronically submitted to <%= @plan.carrier_profile.legal_name %>, and they will send you an invoice. If you don’t receive an invoice from <%= @plan.carrier_profile.legal_name %> within two weeks, please call <%= @plan.carrier_profile.legal_name %> at the number below. Your coverage will be active as of the effective date once you have paid the first month’s premium for coverage. You must make this payment directly to <%= @plan.carrier_profile.legal_name %>. <%= Settings.site.short_name %> doesn’t collect your premium payments.
+									<% if @enrollment.plan.carrier_profile.legal_name == "Kaiser" %>
+									You must pay your first month’s premium directly to Kaiser Permanente to activate your coverage. DC Health Link does not collect premium payments.<br />
+									There are two ways to pay your first month’s premium and activate your coverage:
+									<br />
+									<br />
+									<ul>
+										<li>
+											<strong>Select PAY NOW to make your first premium payment directly to Kaiser Permanente. </strong>
+										</li>
+										<li>
+											<strong>Pay when you receive your invoice. </strong>We sent your enrollment information to Kaiser Permanente electronically. They will send you an invoice. If you don’t receive an invoice within 2 weeks, call Kaiser Permanente at (844) 524-7370 to make your payment.
+										</li>
+									</ul>
+									<br />
+									Once your coverage is activated, Kaiser Permanente will send you your insurance cards and member number. You can start using your benefits on the day your coverage begins.
+									<% else %>
+									<strong>Make your first premium payment directly to <%= @plan.carrier_profile.legal_name %>.</strong>  Your enrollment information was electronically submitted to <%= @plan.carrier_profile.legal_name %>, and they will send you an invoice. If you don’t receive an invoice from <%= @plan.carrier_profile.legal_name %> within two weeks, please call <%= @plan.carrier_profile.legal_name %> at the number below. Your coverage will be active as of the effective date once you have paid the first month’s premium for coverage. You must make this payment directly to <%= @plan.carrier_profile.legal_name %>. <%= Settings.site.short_name %> doesn’t collect your premium payments.
+									<% end %>
                   <br/>
                 </li>
                 <br>
