Refs #25396. User is redirected to the payment URL in a new window

--- a/app/views/insured/plan_shoppings/receipt.html.erb
+++ b/app/views/insured/plan_shoppings/receipt.html.erb
@@ -249,7 +249,7 @@
 				</p>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default pull-left">LEAVE DC HEALTH LINK</button>
+        <%= link_to "LEAVE DC HEALTH LINK", "http://localhost:3000", {type: "button", class: "btn btn-default pull-left", id: "payment-redirect-kp", target: "_blank"} %>
         <button type="button" class="btn btn-default" data-dismiss="modal">GO BACK</button>
       </div>
     </div><!-- /.modal-content -->
